--- a/package.json
+++ b/package.json
@@ -12,12 +12,14 @@
   "dependencies": {
     "react": "^18.3.1",
     "react-accessible-accordion": "^5.0.0",
+    "react-bootstrap": "^2.10.4",
     "react-bootstrap-accordion": "^1.0.0",
     "react-dom": "^18.3.1",
     "react-dropdown": "^1.11.0",
     "react-fancybox": "^0.2.5",
     "react-icons": "^5.3.0",
     "react-router-dom": "^6.26.1",
+    "react-slick": "^0.30.2",
     "slick-carousel": "^1.8.1"
   },
   "devDependencies": {
