--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-fancybox": "^0.2.5",
     "react-icons": "^5.3.0",
     "react-router-dom": "^6.26.1",
+    "react-select": "^5.8.0",
     "react-slick": "^0.30.2",
     "slick-carousel": "^1.8.1"
   },
