--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emotion/react": "^11.13.3",
+    "@emotion/styled": "^11.13.0",
+    "@mui/material": "^6.0.1",
     "react": "^18.3.1",
     "react-accessible-accordion": "^5.0.0",
     "react-bootstrap": "^2.10.4",
